# K4ALoader

./: CMakeLists.txt  K4aLoader.cpp  dynlib_linux.c  dynlib_windows.c  k4aLoader.cpp  main.cpp
Test/: testCMakeLists.txt
cpack/: CMakeLists.txt
include/: K4aLoader.h  dynlib.h  k4a.h  k4aLoader.h  k4atypes.h
include/k4aloader/: k4a.hpp
include/k4loader/: k4a.hpp
